<resources>
    <string name="app_name">Atemschutzueberwachung</string>

    <!-- Main menu -->
    <string name="startOperationButton">Überwachung starten</string>
    <string name="administationText">Verwaltung</string>

    <string name="registerButton">Trupp registrieren</string>
    <string name="endOperation">Einsatz abschließen</string>

    <!--Administration-->
    <string name="draegermanAdministratoion">Atemschutzgeräteträger</string>
    <string name="operationAdministratoion">Einsatzdaten</string>
    <string name="operationAdminLabel">Verwaltung Einsatzdaten</string>
    <string name="draegermanAdminLabel">Verwaltung Atemschutzgeräteträger</string>

    <string name="folderNameExternal">Atemschutzueberwachung</string>

    <string name="iconUnexported">Neu</string>

    <string name="toastNothingSelected">Keine Eintrag ausgewählt!</string>
    <string name="toastExportDeactivated">Export nicht möglich\nKein Zugriff auf Speicher!</string>
    <string name="toastExportSucceeded">Einsätze exportiert</string>
    <string name="toastExportFailed">Fehler beim Export!</string>
    <string name="toastDeletingFailed">Fehler beim Löschen!</string>

    <string name="settings">Einstellungen</string>
    <string name="settingsReminderAlarm">Einstellungen: Erinnerung/Alarm</string>
    <string name="flash">Blitzlicht</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Alarm-Ton</string>

    <string name="noDraegermen">Keine Atemschutzgeräteträger vorhanden</string>
    <string name="noCompletedOperations">Keine Einsatzdaten vorhanden</string>

    <!--Operation-->
    <string name="stateListRegister">Registriert</string>
    <string name="stateListBegin">Angeschlossen</string>
    <string name="stateListArrive">Am Ziel</string>
    <string name="stateListTimer">Einsatzzeitmarke erreicht</string>
    <string name="stateListRetreat">Auf Rückzug</string>
    <string name="stateListEnd">Einsatz beendet</string>
    <string name="stateListPause">Pause</string>
    <string name="stateListResume">Einsatz fortgesetzt</string>

    <string name="leaderShortText">TF:</string>
    <string name="memberShortText">TM:</string>

    <string name="startButton">Einsatzbeginn</string>
    <string name="pauseButton">Pausieren</string>
    <string name="resumeButton">Fortsetzen</string>
    <string name="arriveButton">Ankunft Ziel</string>
    <string name="enterPressureButton">Druck eingeben</string>
    <string name="retreatButton">Rückzug</string>
    <string name="endButton">Einsatzende</string>

    <string name="statusText">Status:</string>
    <string name="leaderText">Truppführer:</string>
    <string name="memberText">Truppmann:</string>
    <string name="pressureText">Druck bei:</string>
    <string name="retreatText">Rückzug</string>
    <string name="orderTextShort">Auftrag:</string>

    <string name="minutesShort">Min</string>

    <!-- Dialogs -->
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>

    <string name="yes">Ja</string>
    <string name="no">Nein</string>

    <!--Alarm- and Warning-Dialogs-->
    <string name="toastOperationNotSaved">Warnung: Der Einsatz wird nicht gespeichert</string>

    <string name="timerInfoTitle">Einsatz</string>
    <string name="startSquadText">Einsatz beginnen?</string>
    <string name="pauseSquadText">Einsatz pausieren?</string>
    <string name="resumeSquadText">Einsatz fortsetzen?</string>

    <string name="pressureWarningTitle">Rückzugsweg</string>
    <string name="returnPressureWarningText">Mindestdruck für Rückzugsweg fast erreicht!</string>
    <string name="returnPressureAlarmText">Achtung!\n\nMindestdruck für Rückzugsweg unterschritten!\nSicherungstrupp alamieren!</string>

    <string name="endOperationTitle">Einsatz abschließen</string>
        <string name="endOperationWarning">Noch nicht alle Trupps haben ihren Einsatz beendet!</string>

    <string name="deleteWarningTitle">Löschen</string>
    <string name="deleteWarningText">Wirklich löschen?</string>

    <string name="alarmMessageTitle">Einsatzzeit</string>
    <string name="alarmMessageText1">Der Trupp </string>
    <string name="alarmMessageText2">hat seine Einsatzzeit überschritten!\nSicherungstrupp alamieren!</string>

    <!--Register Dialog-->
    <string name="registerSquadTitle">Trupp registrieren</string>
    <string name="squadnameText">Funkrufname:</string>
    <string name="squadnameHint">Funkrufname</string>

    <string name="leadernameHint">Truppführer</string>
    <string name="membernameHint">Truppmann</string>
    <string name="spinnerHint">Namen auswählen</string>

    <string name="operationTimeDebug">3 Minuten</string>
    <string name="operationTimeShort">20 Minuten</string>
    <string name="operationTimeNormal">30 Minuten</string>
    <string name="operationTimeLong">60 Minuten</string>

    <string name="orderText">Einsatzauftrag:</string>
    <string name="initialPressure">Druck:</string>
    <string name="leaderPressureHint">Druck TF</string>
    <string name="memberPressureHint">Druck TM</string>

    <string name="orderListExplore">Erkunden/Messen</string>
    <string name="orderListFirefighting">Brandbekämpfung</string>
    <string name="orderListSearch">Personensuche</string>
    <string name="orderListHazmat">Gefahrguteinsatz</string>
    <string name="orderListProtection">Sicherungstrupp</string>
    <string name="orderListOther">Sonstiges/Zubringer</string>

    <string name="toastOperationResumed">Atemschutzeinsatz wird fortgesetzt</string>
    <string name="toastNoSquadname">Funkrufnamen eingeben!</string>
    <string name="toastNoLeader">Truppführer auswählen!</string>
    <string name="toastNoMember">Truppmann auswählen!</string>
    <string name="toastLeaderMemberEqual">Truppführer und Truppmann identisch!</string>
    <string name="toastNoLeaderName">Truppführer eintragen oder Auswahl verwenden!</string>
    <string name="toastNoMemberName">Truppmann eintragen oder Auswahl verwenden!</string>

    <!--Pressure Dialog-->
    <string name="enterPressureTitle">Druck eingeben</string>
    <string name="eventText">Ereignis:</string>

    <string name="eventListRegister">Registrierung</string>
    <string name="eventListBegin">Einsatzbeginn</string>
    <string name="eventListArrive">Ankunft Ziel</string>
    <string name="eventListTimer">Einsatzzeit</string>
    <string name="eventListRetreat">Rückzug</string>
    <string name="eventListEnd">Einsatzende</string>
    <string name="eventListPause">Pausieren</string>
    <string name="eventListResume">Fortsetzen</string>

    <string name="toastHigherPressure">Druck ungültig - Höher als aktueller Wert!</string>
    <string name="errorInvalidPressure">Druck-Format ungültig!</string>
    <string name="toastPressureUnderZero">Druck kann nicht negativ sein!</string>
    <string name="toastNoPressureLeader">Druck Truppführer eingeben!</string>
    <string name="toastNoPressureMember">Druck Truppmann eingeben!</string>

    <!--End Operation Dialog-->
    <string name="oberserverText">Überwacher:</string>
    <string name="observerHint">Überwacher</string>
    <string name="operationText">Einsatz:</string>
    <string name="operationHint">Einsatzart</string>
    <string name="locationText">Einsatzort:</string>
    <string name="locationHint">Einsatzort</string>
    <string name="unitText">Einheit:</string>
    <string name="unitHint">Einheit (Optional)</string>
    <string name="toastNoObserver">Namen des Überwachers eingeben!</string>
    <string name="toastNoOperation">Einsatz eingeben!</string>
    <string name="toastNoLocation">Einsatzort eingeben!</string>

    <!--Add Draegerman Dialog-->
    <string name="firstnameText">Vorname:</string>
    <string name="firstnameHint">Vorname</string>
    <string name="lastnameText">Nachname:</string>
    <string name="lastnameHint">Nachname</string>
    <string name="toastNoFirstname">Kein Vorname eingetragen!</string>
    <string name="toastNoLastname">Kein Nachname eingetragen!</string>
    <string name="toastDraegermanAlreadyExisiting">existiert bereits!</string>
    <string name="toastDraegermanAddError">Atemschutzgeräteträger konnte nicht hinzugefügt werden!</string>

</resources>
