<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp">

    <TextView
        android:id="@+id/observer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_observer"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="11dp"
        android:text="@string/oberserverText"
        android:textSize="@dimen/normalTextSize" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/observer"
        android:padding="11dp"
        android:text="@string/operationText"
        android:textSize="@dimen/normalTextSize" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/operation"
        android:padding="11dp"
        android:text="@string/locationText"
        android:textSize="@dimen/normalTextSize" />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/location"
        android:padding="11dp"
        android:text="@string/unitText"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/edit_observer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/observer"
        android:ems="10"
        android:hint="@string/observerHint"
        android:inputType="textPersonName"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/edit_operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/operation"
        android:layout_toEndOf="@+id/observer"
        android:ems="10"
        android:hint="@string/operationHint"
        android:inputType="textPersonName"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/edit_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/location"
        android:layout_alignBottom="@+id/location"
        android:layout_alignStart="@+id/edit_operation"
        android:ems="10"
        android:hint="@string/locationHint"
        android:inputType="textPersonName"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/edit_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_location"
        android:layout_below="@+id/edit_location"
        android:ems="10"
        android:hint="@string/unitHint"
        android:inputType="textPersonName"
        android:textSize="@dimen/normalTextSize" />

</RelativeLayout>