<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkgrey"
        app:titleTextColor="@color/lighgrey"
        app:title="@string/settings" />

    <CheckBox
        android:id="@+id/enableFlash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flash"
        android:layout_margin="10dp"
        android:textSize="@dimen/textSizeDetailMedium"
        android:padding="10dp"/>

    <CheckBox
        android:id="@+id/enableVibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vibration"
        android:textSize="@dimen/textSizeDetailMedium"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <CheckBox
        android:id="@+id/enableSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:textSize="@dimen/textSizeDetailMedium"
        android:layout_margin="10dp"
        android:padding="10dp"/>
</LinearLayout>