<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp">

    <Spinner
        android:id="@+id/edit_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_leaderpressure"
        android:layout_alignStart="@+id/edit_leaderpressure" />

    <EditText
        android:id="@+id/edit_leaderpressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/leaderpressure"
        android:layout_toEndOf="@+id/leaderpressure"
        android:ems="5"
        android:hint="@string/leaderPressureHint"
        android:inputType="number"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/edit_memberpressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leaderpressure"
        android:layout_toEndOf="@+id/leaderpressure"
        android:ems="5"
        android:hint="@string/memberPressureHint"
        android:inputType="number"
        android:textSize="@dimen/normalTextSize" />

    <TextView
        android:id="@+id/event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="11dp"
        android:text="@string/eventText"
        android:textSize="@dimen/normalTextSize" />

    <TextView
        android:id="@+id/leaderpressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/event"
        android:padding="11dp"
        android:text="@string/leaderText"
        android:textSize="@dimen/normalTextSize" />

    <TextView
        android:id="@+id/memberpressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/leaderpressure"
        android:padding="11dp"
        android:text="@string/memberText"
        android:textSize="@dimen/normalTextSize"
        tools:layout_editor_absoluteX="16dp" />

</RelativeLayout>