<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/administrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/menuMargin"
        android:text="@string/administationText"
        android:textSize="@dimen/menuTitleSize" />

    <Button
        android:id="@+id/operationAdministrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/draegermanAdministrationButton"
        android:layout_alignStart="@+id/draegermanAdministrationButton"
        android:layout_below="@+id/administrationText"
        android:layout_marginTop="@dimen/menuMargin"
        android:padding="@dimen/listMargin"
        android:text="@string/operationAdministratoion" />

    <Button
        android:id="@+id/draegermanAdministrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/operationAdministrationButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/menuMargin"
        android:padding="@dimen/listMargin"
        android:text="@string/draegermanAdministratoion" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/operationAdministrationButton"
        android:layout_alignStart="@+id/operationAdministrationButton"
        android:layout_below="@+id/draegermanAdministrationButton"
        android:layout_marginTop="@dimen/menuMargin"
        android:padding="@dimen/listMargin"
        android:text="@string/settings" />
</RelativeLayout>