<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="12dp"
    android:paddingTop="6dp">

    <TextView
        android:id="@+id/squadname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="12dp"
        android:text="@string/squadnameText"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/edit_squadname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/squadname"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/orderText"
        android:ems="14"
        android:hint="@string/squadnameHint"
        android:inputType="textPersonName"
        android:textSize="@dimen/normalTextSize" />

    <Spinner
        android:id="@+id/spinner_operatingtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/squadname"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/edit_squadname" />


    <TextView
        android:id="@+id/leaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/squadname"
        android:gravity="bottom"
        android:padding="12dp"
        android:text="@string/leaderText"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/edit_leadername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/leaderText"
        android:layout_alignStart="@+id/edit_membername"
        android:layout_alignTop="@+id/leaderText"
        android:layout_toStartOf="@+id/leaderEditButton"
        android:hint="@string/leadernameHint"
        android:inputType="textPersonName"
        android:textSize="@dimen/normalTextSize" />

    <Spinner
        android:id="@+id/spinner_leader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_membername"
        android:layout_alignTop="@+id/leaderText"
        android:layout_toStartOf="@+id/leaderEditButton"
        android:layout_alignBottom="@+id/leaderText"
        android:spinnerMode="dialog" />

    <ImageButton
        android:id="@+id/leaderEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/leaderText"
        android:layout_alignTop="@+id/leaderText"
        android:layout_toStartOf="@+id/spinner_operatingtime"
        android:background="@null"
        android:scaleType="fitCenter"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="9dp"
        android:tint="@android:color/black"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/leaderPressureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/leaderText"
        android:layout_toEndOf="@+id/leaderEditButton"
        android:padding="11dp"
        android:text="@string/initialPressure"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/edit_leaderpressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/leaderText"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/leaderText"
        android:layout_toEndOf="@+id/leaderPressureText"
        android:ems="4"
        android:hint="@string/leaderPressureHint"
        android:inputType="number"
        android:textSize="@dimen/normalTextSize" />


    <TextView
        android:id="@+id/memberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/leaderText"
        android:gravity="bottom"
        android:padding="12dp"
        android:text="@string/memberText"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/edit_membername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/memberText"
        android:layout_alignTop="@+id/memberText"
        android:layout_toEndOf="@+id/orderText"
        android:layout_toStartOf="@+id/memberEditButton"
        android:hint="@string/membernameHint"
        android:inputType="textPersonName"
        android:textSize="@dimen/normalTextSize" />

    <Spinner
        android:id="@+id/spinner_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/memberText"
        android:layout_alignTop="@+id/memberText"
        android:layout_toEndOf="@+id/orderText"
        android:layout_toStartOf="@+id/memberEditButton"
        android:spinnerMode="dialog" />

    <ImageButton
        android:id="@+id/memberEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_alignBottom="@+id/memberText"
        android:layout_alignTop="@+id/memberText"
        android:layout_toStartOf="@+id/spinner_operatingtime"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:scaleType="fitCenter"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="9dp"
        android:tint="@android:color/black"/>

    <TextView
        android:id="@+id/memberPressureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/memberText"
        android:layout_alignTop="@+id/memberText"
        android:layout_toEndOf="@+id/memberEditButton"
        android:padding="11dp"
        android:text="@string/initialPressure"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/edit_memberpressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/memberText"
        android:layout_toEndOf="@+id/memberPressureText"
        android:ems="4"
        android:hint="@string/memberPressureHint"
        android:inputType="number"
        android:textSize="@dimen/normalTextSize" />


    <TextView
        android:id="@+id/orderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/memberText"
        android:gravity="bottom"
        android:padding="12dp"
        android:text="@string/orderText"
        android:textSize="@dimen/normalTextSize" />

    <Spinner
        android:id="@+id/spinner_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/orderText"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/orderText"
        android:layout_toEndOf="@+id/orderText"
        android:spinnerMode="dialog" />

</RelativeLayout>