<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/timer"
            android:layout_columnWeight="1"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:text="00:00"
            app:autoSizeTextType="uniform"
            android:padding="5dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/squadname"
            android:layout_column="1"
            android:layout_columnWeight="5"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:layout_rowWeight="2"
            android:text="Atemschutztrupp 1"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/stateText"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/statusText"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/state"
            android:layout_column="2"
            android:layout_columnWeight="4"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="Am Ziel"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/orderText"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:padding="5dp"
            android:text="@string/orderTextShort"
            app:autoSizeTextType="uniform" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/order"
            android:layout_column="2"
            android:layout_columnWeight="4"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="Brandbekämpfung"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />



    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/leaderText"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/leaderText"
            app:autoSizeTextType="uniform"
            android:padding="5dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/memberText"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/memberText"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/lastPressureText"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/pressureText"
            android:textAlignment="textEnd"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/leaderName"
            android:layout_column="1"
            android:layout_row="1"
            android:text="Meier"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/memberName"
            android:layout_column="1"
            android:layout_row="2"
            android:text="Huber"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/pressureTime1"
            android:layout_column="2"
            android:layout_row="0"
            android:text="30"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/leaderPressure1"
            android:layout_column="2"
            android:layout_row="1"
            android:text="300"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/memberPressure1"
            android:layout_column="2"
            android:layout_row="2"
            android:text="310"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/pressureTime2"
            android:layout_column="3"
            android:layout_row="0"
            android:text="30"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/leaderPressure2"
            android:layout_column="3"
            android:layout_row="1"
            android:text="300"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/memberPressure2"
            android:layout_column="3"
            android:layout_row="2"
            android:text="310"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/pressureTime3"
            android:layout_column="4"
            android:layout_row="0"
            android:text="30"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/leaderPressure3"
            android:layout_column="4"
            android:layout_row="1"
            android:text="300"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/memberPressure3"
            android:layout_column="4"
            android:layout_row="2"
            android:text="310"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/returnText"
            android:layout_column="5"
            android:layout_row="0"
            android:text="@string/retreatAtText"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            android:padding="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/leaderReturnPressure"
            android:layout_column="5"
            android:layout_row="1"
            app:autoSizeTextType="uniform"
            android:padding="5dp"
            android:text="80"
            android:textAlignment="textEnd" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/memberReturnPressure"
            android:layout_column="5"
            android:layout_row="2"
            app:autoSizeTextType="uniform"
            android:padding="5dp"
            android:text="100"
            android:textAlignment="textEnd" />

    </GridLayout>

</LinearLayout>